// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`as-category-widget Rendering should not render header when showHeader is false 1`] = `
<as-category-widget
  class="hydrated"
>
  
  
  <ul
    class="as-category-widget__list"
  >
    
  </ul>
  <footer
    class="as-category-widget__footer"
  >
    <div
      class="as-category-widget__count as-body"
    >
      All selected
    </div>
    
  </footer>
</as-category-widget>
`;

exports[`as-category-widget Rendering should render bars according to total value 1`] = `
<as-category-widget
  class="hydrated"
>
  
  <h2
    class="as-subheader"
  >
    
  </h2>
  <p
    class="as-category-widget__description as-body"
  >
    
  </p>
  <ul
    class="as-category-widget__list"
  >
    <li
      class="as-category-widget__category"
    >
      <p
        class="as-category-widget__category-title as-body"
        data-value="1.0K"
      >
        Bars & Restaurants
      </p>
      <div
        class="as-category-widget__bar"
      >
        <div
          class="as-category-widget__value"
          style="background-color: rgb(250, 186, 218); width: 16.39344262295082%;"
        />
      </div>
    </li>
    <li
      class="as-category-widget__category"
    >
      <p
        class="as-category-widget__category-title as-body"
        data-value="900"
      >
        Fashion
      </p>
      <div
        class="as-category-widget__bar"
      >
        <div
          class="as-category-widget__value"
          style="background-color: rgb(71, 219, 153); width: 14.754098360655737%;"
        />
      </div>
    </li>
    <li
      class="as-category-widget__category"
    >
      <p
        class="as-category-widget__category-title as-body"
        data-value="800"
      >
        Grocery
      </p>
      <div
        class="as-category-widget__bar"
      >
        <div
          class="as-category-widget__value"
          style="background-color: rgb(71, 219, 153); width: 13.114754098360656%;"
        />
      </div>
    </li>
    <li
      class="as-category-widget__category"
    >
      <p
        class="as-category-widget__category-title as-body"
        data-value="400"
      >
        Health
      </p>
      <div
        class="as-category-widget__bar"
      >
        <div
          class="as-category-widget__value"
          style="background-color: rgb(71, 219, 153); width: 6.557377049180328%;"
        />
      </div>
    </li>
    <li
      class="as-category-widget__category"
    >
      <p
        class="as-category-widget__category-title as-body"
        data-value="250"
      >
        Shopping mall
      </p>
      <div
        class="as-category-widget__bar"
      >
        <div
          class="as-category-widget__value"
          style="background-color: rgb(71, 219, 153); width: 4.098360655737705%;"
        />
      </div>
    </li>
    <li
      class="as-category-widget__category"
    >
      <p
        class="as-category-widget__category-title as-body"
        data-value="1.6K"
      >
        Transportation
      </p>
      <div
        class="as-category-widget__bar"
      >
        <div
          class="as-category-widget__value"
          style="background-color: rgb(71, 219, 153); width: 25.40983606557377%;"
        />
      </div>
    </li>
    <li
      class="as-category-widget__category"
    >
      <p
        class="as-category-widget__category-title as-body"
        data-value="1.2K"
      >
        Leisure
      </p>
      <div
        class="as-category-widget__bar"
      >
        <div
          class="as-category-widget__value"
          style="background-color: rgb(71, 219, 153); width: 19.672131147540984%;"
        />
      </div>
    </li>
    
  </ul>
  <footer
    class="as-category-widget__footer"
  >
    <div
      class="as-category-widget__count as-body"
    >
      All selected
    </div>
    
  </footer>
</as-category-widget>
`;

exports[`as-category-widget Rendering should render clear button 1`] = `
<as-category-widget
  class="hydrated"
>
  
  <h2
    class="as-subheader"
  >
    
  </h2>
  <p
    class="as-category-widget__description as-body"
  >
    
  </p>
  <ul
    class="as-category-widget__list"
  >
    <li
      class="as-category-widget__category"
    >
      <p
        class="as-category-widget__category-title as-body"
        data-value="1.0K"
      >
        Bars & Restaurants
      </p>
      <div
        class="as-category-widget__bar"
      >
        <div
          class="as-category-widget__value"
          style="background-color: rgb(250, 186, 218); width: 64.51612903225806%;"
        />
      </div>
    </li>
    <li
      class="as-category-widget__category"
    >
      <p
        class="as-category-widget__category-title as-body"
        data-value="900"
      >
        Fashion
      </p>
      <div
        class="as-category-widget__bar"
      >
        <div
          class="as-category-widget__value"
          style="background-color: rgb(71, 219, 153); width: 58.06451612903226%;"
        />
      </div>
    </li>
    <li
      class="as-category-widget__category"
    >
      <p
        class="as-category-widget__category-title as-body"
        data-value="800"
      >
        Grocery
      </p>
      <div
        class="as-category-widget__bar"
      >
        <div
          class="as-category-widget__value"
          style="background-color: rgb(71, 219, 153); width: 51.61290322580645%;"
        />
      </div>
    </li>
    <li
      class="as-category-widget__category"
    >
      <p
        class="as-category-widget__category-title as-body"
        data-value="400"
      >
        Health
      </p>
      <div
        class="as-category-widget__bar"
      >
        <div
          class="as-category-widget__value"
          style="background-color: rgb(71, 219, 153); width: 25.806451612903224%;"
        />
      </div>
    </li>
    <li
      class="as-category-widget__category"
    >
      <p
        class="as-category-widget__category-title as-body"
        data-value="250"
      >
        Shopping mall
      </p>
      <div
        class="as-category-widget__bar"
      >
        <div
          class="as-category-widget__value"
          style="background-color: rgb(71, 219, 153); width: 16.129032258064516%;"
        />
      </div>
    </li>
    <li
      class="as-category-widget__category"
    >
      <p
        class="as-category-widget__category-title as-body"
        data-value="1.6K"
      >
        Transportation
      </p>
      <div
        class="as-category-widget__bar"
      >
        <div
          class="as-category-widget__value"
          style="background-color: rgb(71, 219, 153); width: 100%;"
        />
      </div>
    </li>
    <li
      class="as-category-widget__category"
    >
      <p
        class="as-category-widget__category-title as-body"
        data-value="1.2K"
      >
        Leisure
      </p>
      <div
        class="as-category-widget__bar"
      >
        <div
          class="as-category-widget__value"
          style="background-color: rgb(71, 219, 153); width: 77.41935483870968%;"
        />
      </div>
    </li>
    
  </ul>
  <footer
    class="as-category-widget__footer"
  >
    <div
      class="as-category-widget__count as-body"
    >
      All selected
    </div>
    <button
      class="as-category-widget__clear"
    >
      Clear selection
    </button>
  </footer>
</as-category-widget>
`;

exports[`as-category-widget Rendering should render properly 1`] = `
<as-category-widget
  class="hydrated"
>
  
  <h2
    class="as-subheader"
  >
    Category Widget Example
  </h2>
  <p
    class="as-category-widget__description as-body"
  >
    Description for Category Widget
  </p>
  <ul
    class="as-category-widget__list"
  >
    <li
      class="as-category-widget__category"
    >
      <p
        class="as-category-widget__category-title as-body"
        data-value="1.0K"
      >
        Bars & Restaurants
      </p>
      <div
        class="as-category-widget__bar"
      >
        <div
          class="as-category-widget__value"
          style="background-color: rgb(250, 186, 218); width: 64.51612903225806%;"
        />
      </div>
    </li>
    <li
      class="as-category-widget__category"
    >
      <p
        class="as-category-widget__category-title as-body"
        data-value="900"
      >
        Fashion
      </p>
      <div
        class="as-category-widget__bar"
      >
        <div
          class="as-category-widget__value"
          style="background-color: rgb(71, 219, 153); width: 58.06451612903226%;"
        />
      </div>
    </li>
    <li
      class="as-category-widget__category"
    >
      <p
        class="as-category-widget__category-title as-body"
        data-value="800"
      >
        Grocery
      </p>
      <div
        class="as-category-widget__bar"
      >
        <div
          class="as-category-widget__value"
          style="background-color: rgb(71, 219, 153); width: 51.61290322580645%;"
        />
      </div>
    </li>
    <li
      class="as-category-widget__category"
    >
      <p
        class="as-category-widget__category-title as-body"
        data-value="400"
      >
        Health
      </p>
      <div
        class="as-category-widget__bar"
      >
        <div
          class="as-category-widget__value"
          style="background-color: rgb(71, 219, 153); width: 25.806451612903224%;"
        />
      </div>
    </li>
    <li
      class="as-category-widget__category"
    >
      <p
        class="as-category-widget__category-title as-body"
        data-value="250"
      >
        Shopping mall
      </p>
      <div
        class="as-category-widget__bar"
      >
        <div
          class="as-category-widget__value"
          style="background-color: rgb(71, 219, 153); width: 16.129032258064516%;"
        />
      </div>
    </li>
    <li
      class="as-category-widget__category"
    >
      <p
        class="as-category-widget__category-title as-body"
        data-value="1.6K"
      >
        Transportation
      </p>
      <div
        class="as-category-widget__bar"
      >
        <div
          class="as-category-widget__value"
          style="background-color: rgb(71, 219, 153); width: 100%;"
        />
      </div>
    </li>
    <li
      class="as-category-widget__category"
    >
      <p
        class="as-category-widget__category-title as-body"
        data-value="1.2K"
      >
        Leisure
      </p>
      <div
        class="as-category-widget__bar"
      >
        <div
          class="as-category-widget__value"
          style="background-color: rgb(71, 219, 153); width: 77.41935483870968%;"
        />
      </div>
    </li>
    
  </ul>
  <footer
    class="as-category-widget__footer"
  >
    <div
      class="as-category-widget__count as-body"
    >
      All selected
    </div>
    <button
      class="as-category-widget__clear"
    >
      Clear selection
    </button>
  </footer>
</as-category-widget>
`;
